feat: get and update profile API
