# BE/src/dtos/users.dto.ts
@@ -1,9 +1,12 @@
-import { IsEmail, IsString, IsNotEmpty, MinLength, MaxLength } from 'class-validator';
+import { IsEmail, IsString, IsNotEmpty, IsOptional } from 'class-validator';
 
 export class CreateUserDto {
   @IsString()
   @IsNotEmpty()
   public username: string;
+
+  @IsOptional()
+  public fullName: string;
 
   @IsEmail()
   public email: string;
@@ -25,4 +28,17 @@ export class LoginUserDto {
   @IsString()
   @IsNotEmpty()
   public password: string;
+}
+
+export class UpdateUserDto {
+  @IsString()
+  @IsNotEmpty()
+  public fullName: string;
+
+  @IsEmail()
+  public email: string;
+
+  @IsString()
+  @IsNotEmpty()
+  public phone: string;
 }
