# BE/swagger.yaml
@@ -81,20 +81,62 @@ paths:
         500:
           description: 'Server Error'
 
+  # [GET] v1/api/me
+  /v1/api/me:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - auth
+      summary: User get profile information
+      responses:
+        200:
+          description: 'OK'
+        401:
+          description: 'Unauthorized'
+        500:
+          description: 'Server Error'
+
+  # [PUT] v1/api/me
+/v1/api/me:
+  put:
+    security:
+      - bearerAuth: []
+    tags:
+      - auth
+    summary: User update profile information
+    parameters:
+      - name: body
+        in: body
+        description: update profile body
+        required: true
+        schema:
+          $ref: '#/definitions/updateProfileInput'
+    responses:
+      200:
+        description: 'OK'
+      401:
+        description: 'Unauthorized'
+      500:
+        description: 'Server Error'
+
 # definitions
 definitions:
   User:
     type: object
     required:
       - id
+      - fullName
       - username
       - email
       - phone
-      - status
     properties:
       id:
         type: string
         definition: User's id
+      fullName:
+        type: string
+        description: User's full name
       username:
         type: string
         description: User's username
@@ -104,9 +146,6 @@ definitions:
       phone:
         type: string
         description: User's phone number
-      status:
-        type: boolean
-        description: User's status
 
   loginInput:
     type: object
@@ -141,6 +180,23 @@ definitions:
       phone:
         type: string
         description: User's phone number for signup
+
+  updateProfileInput:
+    type: object
+    required:
+      - fullName
+      - email
+      - phone
+    properties:
+      fullName:
+        type: string
+        description: User's full name for update profile
+      email:
+        type: string
+        description: User's email for update profile
+      phone:
+        type: string
+        description: User's phone number for update profile
 
 schemes:
   - https
